--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ ignore:
 ## Themes: https://hexo.io/themes/
 
 # https://github.com/jbreckmckye/hexo-theme-octo
-theme: octo
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
