--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "7.3.0"
   },
   "dependencies": {
+    "@adobe/css-tools": "^4.4.0",
     "hexo": "^7.3.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
